# aimasters

./: .gitignore  01.HW.NumPy.ipynb  main.py
1sem/ML1/: pyproject.toml
1sem/ML1/.virtual_documents/homeworks/: 02.HW.Pandas_MPL_Seaborn.ipynb
1sem/ML1/.virtual_documents/homeworks/hw3/: hw3.ipynb
1sem/ML1/.virtual_documents/homeworks/old/: hw2_tools.ipynb
1sem/ML1/.virtual_documents/seminars/: 02_S_Pandas_MPL_Seaborn.ipynb
1sem/ML1/.virtual_documents/seminars/pandas, matplotlib, seaborn/: matplotlib, seaborn.ipynb
1sem/ML1/homeworks/: 01.HW.NumPy.ipynb  02.HW.Pandas_MPL_Seaborn.ipynb  hw1_numpy.ipynb
1sem/ML1/homeworks/.ipynb_checkpoints/: 01.HW.NumPy-checkpoint.ipynb  02.HW.Pandas_MPL_Seaborn-checkpoint.ipynb  hw1_numpy-checkpoint.ipynb  hw2_tools-checkpoint.ipynb
1sem/ML1/homeworks/hw3/: hw3.ipynb  optuna_studies.db
1sem/ML1/homeworks/hw3/.ipynb_checkpoints/: hw3-checkpoint.ipynb
1sem/ML1/homeworks/hw4/: hw4.ipynb  optuna.db
1sem/ML1/homeworks/hw4/.ipynb_checkpoints/: hw4-checkpoint.ipynb
1sem/ML1/homeworks/hw4/.virtual_documents/: hw4.ipynb
1sem/ML1/homeworks/hw5/: hw5.ipynb  main.ipynb  task.ipynb
1sem/ML1/homeworks/old/: hw3.ipynb
1sem/ML1/homeworks/old/.ipynb_checkpoints/: hw3-checkpoint.ipynb
1sem/ML1/seminars/: 01_S_AIM_NumPy_SciPy.ipynb  02_S_Pandas_MPL_Seaborn.ipynb
1sem/ML1/seminars/.ipynb_checkpoints/: 01.HW.NumPy-checkpoint.ipynb  01_S_AIM_NumPy_SciPy-checkpoint.ipynb
1sem/ML1/seminars/pandas, matplotlib, seaborn/: matplotlib, seaborn.ipynb  pandas.ipynb
1sem/ML1/utils/: utils.py
1sem/python/hw1/: 1.py  (+3 more)
utils/: utils.py
(+53 files in other folders)
