[project]
name = "aimasters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "catboost>=1.2.8",
  "ipykernel>=6.30.1",
  "jupyter>=1.1.1",
  "jupyterlab-lsp>=5.2.0",
  "jupyterlab-optuna>=0.2.4",
  "lightgbm>=4.6.0",
  "matplotlib>=3.10.6",
  "numpy>=2.3.3",
  "optuna>=4.5.0",
  "pandas>=2.3.3",
  "python-lsp-server>=1.13.1",
  "scikit-learn>=1.7.2",
  "scipy>=1.16.2",
  "seaborn>=0.13.2",
  "xgboost>=3.1.1",
]
